# teaching

./: .gitignore  README.md
itmo_algo_2024/flow/: checker.cpp  gen.cpp  stress.cpp
itmo_algo_2024/lca/: CMakeLists.txt  checker.cpp  gen.cpp  lca.cpp  test  test2  test3
sms_2024/: graph_theory.tex  prob_theory.tex
